# aquarium

./: .gitignore  README.md
Aquarium/AqEngine/: Package.swift  README.md
Aquarium/Aquarium/: AppDelegate.swift  Board.swift  BoardData.swift  SceneDelegate.swift  URLSession+.swift  ViewController.swift
Aquarium/Aquarium.xcodeproj/: project.pbxproj
Aquarium/AquariumTests/: AquariumTests.swift
Aquarium/AquariumUITests/: AquariumUITests.swift  AquariumUITestsLaunchTests.swift
Aquarium/Engine/: Makefile  Package.swift  README.md
problems/: index.js
problems/problem-db/: 10x10_easy_v1.json  10x10_easy_v2.json  10x10_easy_v3.json  10x10_easy_v4.json  10x10_easy_v5.json  10x10_easy_v6.json  10x10_hard_v1.json  10x10_hard_v2.json  10x10_hard_v3.json  10x10_hard_v4.json  10x10_hard_v5.json  10x10_hard_v6.json  10x10_normal_v1.json  10x10_normal_v2.json  10x10_normal_v3.json  10x10_normal_v4.json  10x10_normal_v5.json  10x10_normal_v6.json  15x15_easy_v1.json  15x15_easy_v2.json  15x15_easy_v3.json  15x15_easy_v4.json  15x15_easy_v5.json  15x15_easy_v6.json  15x15_hard_v1.json  (+50 more)
problemset/: package.json
rust/: Cargo.toml  Makefile  README.md  log
rust/crates/core/: lib.rs  main.rs
rust/crates/grid/src/: action.rs  builder.rs  cell.rs  debug.rs  forcing_moves.rs  grid.rs  instance.rs  lib.rs  point.rs  pour_point.rs  quota.rs  state.rs  structs.rs
rust/src/: cell.rs  error.rs  groups.rs  lib.rs  main.rs  piece.rs  quota.rs
rust/src/grid/: builder.rs  debug.rs  freq.rs  mod.rs  mutate.rs
rust/src/grid2/: builder.rs  freq.rs  mod.rs  mutate.rs
(+160 files in other folders)
