[package]
name = "aquarium"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
bench = false
path = "crates/core/main.rs"
name = "aquarium"

[lib]
bench = false
path = "crates/core/lib.rs"
name = "aquarium"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
grid = { version = "0.1.0", path = "crates/grid" }

[workspace]
members = [
  "crates/grid",
]
